--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ ul > li {
 }
 
 body {
-  background-image: url("../imagens/fundo-site.png");
+  background-image: url("files/imagens/fundo-site.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -92,17 +92,17 @@ main {
 }
 
 .background1 {
-  background-image: url("../imagens/fundo-card-1.jpg");
+  background-image: url("files/imagens/fundo-card-1.jpg");
   background-repeat: no-repeat;
 }
 
 .background2 {
-  background-image: url("../imagens/fundo-card-2.jpg");
+  background-image: url("files/imagens/fundo-card-2.jpg");
   background-repeat: no-repeat;
 }
 
 .background3 {
-  background-image: url("../imagens/fundo-card-3.jpg");
+  background-image: url("files/imagens/fundo-card-3.jpg");
   background-repeat: no-repeat;
 }
 
